<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="New User Registration"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:hint="Name to be display on screen"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mapViewDefault" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="Password"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="@+id/editTextName"
                        app:layout_constraintStart_toStartOf="@+id/editTextName"
                        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="Email address"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
                        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

                    <EditText
                        android:id="@+id/editLocationSignUp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:hint="Enter street address"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider3" />

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/mapViewDefault"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:focusable="auto"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editLocationSignUp" />

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextPassword">

                        <Button
                            android:id="@+id/buttonUserSignUp"
                            style="@android:style/Widget.Material.Button.Colored"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/btn_signup" />

                        <Button
                            android:id="@+id/buttonSignUpCancel"
                            style="@android:style/Widget.Material.Button.Colored"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/post_button_cancel" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>